fix: add trim promocode, text-align: left promocode

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,5 +4,6 @@
   .promo-codes_list {
     display: flex;
     justify-content: center;
+    text-align: left;
   }
 }
